# asgardex-mobile

./: .electronbuildrc  .electronbuildrc.config.js  .env.sample  .eslintrc  .eslintrc.json  .gitignore  .prettierrc  .stylelint.config.js  @empty.js  BRANCHING_WORKFLOW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  PACKAGE_MACOS.md  README.md  RELEASE.md  craco.config.js  dev-app-update.sample.yml  electron.vite.config.js  electron.vite.config.mjs  empty.js  eslint.config.mjs  package.json  setup.vitest.js  tailwind.config.cjs  tailwind.config.js  tailwind.config.mjs  tsconfig.json  tsconfig.main.json  vite.shared.config.mjs  vite.storybook.js  vite.tauri.config.mjs  vite.test.config.ts
.github/: release.yml
.github/workflows/: build-android.yml  test.yml  (+4 more)
.storybook/: main.js  preview.tsx
.trunk/: trunk.yaml
docs/: _config.yml  privacy-policy.md
scripts/: check-lockfile.sh  extract-changelog.py  generateERC20Whitelist.ts  notarize.js  notarize.mjs  sync-tauri-version.mjs  tauri-clean.sh  trunk-check.sh  validate-prod-bundle.mjs  validate-tauri-integrity.sh  yarn-lock-check.sh
src/: setupTests.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json  ios.json  mobile-safe-area.json
src-tauri/ios/: Podfile  project.yml
src-tauri/ios/App/Assets.xcassets/AppIcon.appiconset/: Contents.json
src-tauri/ios/App/Config/: version.xcconfig
src-tauri/ios/app.xcodeproj/: project.pbxproj
src-tauri/ios/app.xcodeproj/xcshareddata/xcschemes/: app_iOS.xcscheme
src-tauri/ios/app_iOS/: Info.plist
src-tauri/src/: lib.rs
(+1047 files in other folders)
