[package]
name = "asgardex-tauri"
version = "1.41.3"
description = "ASGARDEX desktop wallet running on Tauri"
authors = ["ASGARDEX Maintainers"]
license = "MIT"
repository = "https://github.com/asgardex/asgardex-desktop"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = [] }
tauri-plugin-dialog = "2.4.1"
tauri-plugin-fs = "2.4.3"
tauri-plugin-log = "2.7.0"
tauri-plugin-shell = "2.3.2"
tauri-plugin-store = "2.4.0"
tauri-plugin-secure-storage = "1.4.0"
tauri-plugin-biometric = "2.3.1"
